# parts

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_migration.py
app/: cache.py  database.py  main.py
app/api/: parts.py
app/models/: part.py
app/schemas/: part.py
tests/: conftest.py  test_parts.py
