[tool.poetry]
name = "parts-api"
version = "0.1.0"
description = "REST API for managing parts"
authors = ["Roberto Buarque Filho <roberto@robertobuarque.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = "0.115.12"
uvicorn = ">=0.15.0"
sqlalchemy = "2.0.40"
psycopg2-binary = ">=2.9.0"
pydantic = ">=1.8.0"
alembic = "1.15.2"
python-dotenv = ">=0.19.0"
redis = ">=5.0.1"

[tool.poetry.group.test.dependencies]
pytest = "8.2.2"
pytest-asyncio = "0.23.5"
httpx = "0.27.0"
pytest-cov = "4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --cov=app --cov-report=term-missing" 